version 0.99.5 (not yet released)
           * updated proj4 source to version 4.7.0, pyproj to 1.8.6.
	   * add "is_land" method to check whether a point is over land or
             water.
	   * geos-3.1.1 now required. 3.1.1 source included (instead of 2.2.3).
           * shiftgrid no longer requires a cyclic point to be present
             (patch from Eric Bruning).
           * fix date2index bugs.
           * update date2index function with a bug-fix from netcdf4-python.
           * in contourf method, mask data outside map projection region
             (this prevents contourf from erroneously filling entire map).
           * added 'nightshade' method to shade night regions on a map.
             'daynight.py' example added to illustrate usage.
           * added lonmin, lonmax instance variables.
version 0.99.4 (svn revision 7332)
           * ax.frame replaced with ax.spines to maintain compatibility 
             with matplotlib spines support.
           * added latmax kwarg to drawparallels and drawmeridians 
             (patch from Chris Murphy).
           * added new example "plotmap_shaded.py" (shaded relief plot).
           * added new example "plothighsandlows.py".
           * add fix_aspect kwarg to Basemap.__init__, when False
             axes.set_aspect is set to 'auto' instead of default 'equal'.
             Can be used to make plot fill whole plot region, even if the 
             plot region doesn't match the aspect ratio of the map region.
           * added date2index function, updated netcdftime to 0.7.1.
           * added maskoceans function.
           * update pupynere to version 1.0.8 (supports writing large files).
           * added more informative error message in readshapefile when
             one of the shapefile components can't be found.
version 0.99.3 (svn revision 6780)
           * if upper right/lower left corners nor width/height given for