@@ -141,5 +141,6 @@ Chris Murphy
 Pierre Gerard-Marchant
 Christoph Gohlke
 Eric Bruning
+Stephane Raynaud
 
 for valuable contributions.
